--- a/app/assets/templates/posts/post_form.jst.ejs
+++ b/app/assets/templates/posts/post_form.jst.ejs
@@ -1,10 +1,9 @@
 <div class="m-background"></div>
 <div class="m-content">
   <h4>Submit a Post</h4><br>
+  <div class="error"></div>
   <form class="post-form">
     <input type="text" name="title" placeholder="Title">
-    <br><br>
-    <input type="text" name="popularity" placeholder="Popularity"> <!-- Change to URL... -->
     <br><br>
 
     <div class="thumb-container">
