--- a/app/assets/templates/posts/post_show.jst.ejs
+++ b/app/assets/templates/posts/post_show.jst.ejs
@@ -16,9 +16,7 @@
   		</div>
   	</div>
   	<br>
-  	<% if (post.image) { %>
-    	<img src="<%= post.image().escape('url') %>" alt="" />
-  	<% } %>
+    <img src="<%= post.image().escape('url') %>" alt="" />
 		<div class="show-post-stats">
 		  <!-- Vote buttons -->
 			<button type="button" class="btn btn-success upvote" name="upvote">
@@ -26,7 +24,7 @@
 			<button type="button" class="btn btn-danger downvote" name="downvote">
 				<span class='glyphicon glyphicon-arrow-down'></span></button>
 
-  		<span class='post-popularity'>Points: <%= post.score() %></span>
+  		<span class='post-popularity'>Points: <%= post.escape('score') %></span>
 			<span class='post-comments'>Comments: <%= post.comments().length %></span>
 		</div>
 
