--- a/app/assets/templates/users/user_edit.jst.ejs
+++ b/app/assets/templates/users/user_edit.jst.ejs
@@ -2,6 +2,7 @@
 <div class="m-content">
   <h4>Edit Your Profile</h4><br>
   <form class="edit-profile">
+    <div class="error"></div>
     <input type="text" name="username" placeholder="Username">
     <br><br>
 
