--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,7 @@
 		<form action='<%= users_url %>' method='post' class='auth-form'>
 			<%= auth_token %>
 			<h3>Sign Up</h3>
+			<div id="notice"><%= flash[:errors] %></div>
 			<div class="form-group">
 				<input type='text' class='form-control' placeholder='Username'
 					aria-describedby='basic-addon1' name='user[username]'>
