--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,6 @@
 		<form action='<%= users_url %>' method='post' class='auth-form'>
 			<%= auth_token %>
 			<h3>Sign Up</h3>
-			<div id="notice"><%= flash[:errors] %></div>
 			<div class="form-group">
 				<input type='text' class='form-control' placeholder='Username'
 					aria-describedby='basic-addon1' name='user[username]'>
@@ -13,7 +12,12 @@
 				<input type='password' class='form-control' placeholder='Password'
 					aria-describedby='basic-addon1' name='user[password]'>
 			</div>
-			<input type='submit' value='Sign Up' class='auth-btn'>
+			<input type='submit' value='Sign Up' class='btn btn-default auth-btn'>
+			<div id="notice">
+			<% if flash[:errors] %>
+				<%= flash[:errors].join(", ") %>
+			<% end %>
+			</div>
 		</form>
 	</div>
 </div>
