--- a/app/assets/templates/posts/post_form.jst.ejs
+++ b/app/assets/templates/posts/post_form.jst.ejs
@@ -1,7 +1,7 @@
 <div class="m-background"></div>
 <div class="m-content">
   <h4>Submit a Post</h4><br>
-  <div class="error"></div>
+  <div class="error"><%= post.get("errors") %></div>
   <form class="post-form">
     <input type="text" name="title" placeholder="Title">
     <br><br>
