--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -44,6 +44,9 @@
         </li>
 
       <% } else { %>
+      	<li>
+      		<div class="please-log-in">Log in to post, comment, and vote! ></div>
+      	</li>
         <!-- Account Dropdown (not logged in) -->
         <li>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
