Still trying to get recent to handle pagination

--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -6,7 +6,7 @@
       <li class='mainIndex'><a class="navbar-brand" href="#/">TenGigg</a></li>
 
       <!-- Sort by Recent -->
-      <li class='recentIndex'><a class='recent' href="#/">Recent</a></li>
+      <li class='recentIndex'><a class='recent' href="#recent/posts">Recent</a></li>
 
       <!-- Categories Dropdown -->
       <li class='categories'>
