--- a/app/assets/templates/comments/comment_form.jst.ejs
+++ b/app/assets/templates/comments/comment_form.jst.ejs
@@ -2,5 +2,6 @@
 	<form class='comment-form'>
 		<textarea class='form-control comment-field' name='body' rows='2' placeholder='Write a comment...'></textarea>
 		<input class='btn btn-info submit-comment' type='submit' value='Add Comment!'>
+		<div class='comment-error'></div>
 	</form>
 </div>
