--- a/app/assets/templates/posts/index_item.jst.ejs
+++ b/app/assets/templates/posts/index_item.jst.ejs
@@ -13,5 +13,6 @@
 
   <span class='post-popularity'>Points: <%= post.escape('score') %></span>
   <span class='post-comments'>Comments: <%= post.comments().length %></span>
+  <div class='vote-error'></div>
 </div>
 <div class='index-item-bumper'></div>
