--- a/app/assets/templates/users/user_header.jst.ejs
+++ b/app/assets/templates/users/user_header.jst.ejs
@@ -17,12 +17,11 @@
 
         <li><a href="#/profile">Overview</a></li>
         <li><a href="#/profile/authored">Posts</a></li>
-        <li><a href="#/profile/commented">Comments</a></li>
+        <li><a href="#/profile/commented">Commented</a></li>
 
       </ul>
     </nav>
   </div>
-
   <div class="col-md-4"></div>
   <div class="col-md-2"></div>
 </div>
