Add voted tab to user profile

--- a/app/assets/templates/users/user_header.jst.ejs
+++ b/app/assets/templates/users/user_header.jst.ejs
@@ -11,18 +11,18 @@
 <div id='section-nav' class="col-md-12">
   <div class="col-md-2"></div>
 
-  <div class="col-md-4">
+  <div class="col-md-6">
     <nav class='navbar nav'>
       <ul class='nav navbar-nav'>
 
         <li><a href="#/profile">Overview</a></li>
         <li><a href="#/profile/authored">Posts</a></li>
         <li><a href="#/profile/commented">Commented</a></li>
+        <li><a href="#/profile/voted">Voted</a></li>
 
       </ul>
     </nav>
   </div>
   <div class="col-md-4"></div>
-  <div class="col-md-2"></div>
 </div>
   <!-- <img src="http://res.cloudinary.com/dwds5fsan/image/upload/w_150,h_150,c_fill/v1440028989/default_dqhmax.png" alt="" /> -->
