Working upvoted posts sort on user profile

--- a/app/assets/templates/users/user_header.jst.ejs
+++ b/app/assets/templates/users/user_header.jst.ejs
@@ -18,7 +18,7 @@
         <li><a href="#/profile">Overview</a></li>
         <li><a href="#/profile/authored">Posts</a></li>
         <li><a href="#/profile/commented">Commented</a></li>
-        <li><a href="#/profile/voted">Voted</a></li>
+        <li><a href="#/profile/voted">Upvoted</a></li>
 
       </ul>
     </nav>
