Change some wording, start trying to make tabs active on profile when clicked

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -367,7 +367,7 @@ li.comment {
   color: black;
 }
 
-#section-nav ul.navbar-nav > li > a:focus {
+#section-nav ul.navbar-nav > li > a.active {
   border-bottom: 4px solid #045FB4;
   color: black;
 }
