--- a/app/assets/templates/users/user_header.jst.ejs
+++ b/app/assets/templates/users/user_header.jst.ejs
@@ -15,10 +15,10 @@
     <nav class='navbar nav'>
       <ul class='nav navbar-nav'>
 
-        <li><a href="#/profile">Overview</a></li>
-        <li><a href="#/profile/authored">Posts</a></li>
-        <li><a href="#/profile/commented">Commented</a></li>
-        <li><a href="#/profile/voted">Upvoted</a></li>
+        <li><a class='filter' href="#/profile">Overview</a></li>
+        <li><a class='filter' href="#/profile/authored">Posts</a></li>
+        <li><a class='filter' href="#/profile/commented">Commented</a></li>
+        <li><a class='filter' href="#/profile/voted">Upvoted</a></li>
 
       </ul>
     </nav>
