Change upvote icons to be more obvious, fix a bug

--- a/app/assets/templates/posts/index_item.jst.ejs
+++ b/app/assets/templates/posts/index_item.jst.ejs
@@ -7,9 +7,9 @@
 <div class="post-stats">
   <!-- Vote buttons -->
   <button type="button" class="btn btn-success upvote" name="upvote">
-    <span class='glyphicon glyphicon-arrow-up'></span></button>
+    <span class='glyphicon glyphicon-thumbs-up'></span></button>
   <button type="button" class="btn btn-danger downvote" name="downvote">
-    <span class='glyphicon glyphicon-arrow-down'></span></button>
+    <span class='glyphicon glyphicon-thumbs-down'></span></button>
 
   <span class='post-popularity'>Points: <%= post.escape('score') %></span>
   <span class='post-comments'>Comments: <%= post.comments().length %></span>
