Another error display

--- a/app/assets/templates/posts/post_show.jst.ejs
+++ b/app/assets/templates/posts/post_show.jst.ejs
@@ -26,6 +26,7 @@
 
   		<span class='post-popularity'>Points: <%= post.escape('score') %></span>
 			<span class='post-comments'>Comments: <%= post.comments().length %></span>
+			<div class='vote-error'></div>
 		</div>
 
 	  <div class="comments-container">
