--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,11 +120,15 @@ div#notice {
 	padding-top: 8px;
 }
 
-//POST STUFF, INDEX + SHOW
+//POST STUFF, SHOW + INDEX
 
 .post-title {
 	font-weight: bold;
 	width: 550px;
+}
+
+a.author {
+	color: #0009BA;
 }
 
 .post-stats {
