More work on search....

--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -10,7 +10,7 @@
 
       <!-- Categories Dropdown -->
       <li class='categories'>
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+        <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown"
         aria-haspopup="true" aria-expanded="false">Categories
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -25,11 +25,11 @@
     <ul class="nav navbar-nav navbar-right">
       <li>
         <div class="search-div">
-          <a href="#" class="dropdown-toggle-search" data-toggle="dropdown" role="button"
-            aria-haspopup="true" aria-expanded="false">
-            <input type="text" class="search" name="instant-search" placeholder="Search"></a>
+          <a href="#" class="dropdown-toggle search-anchor" data-toggle="dropdown" role="button"
+            aria-haspopup="true" aria-expanded="true">
+            <input type="text" class="search-input" name="instant-search" placeholder="Search"></a>
 
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu insta-search">
               <!-- Iterate through results, append lis -->
             </ul>
         </div>
