More progress on search, need to mess with focus

--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -30,7 +30,7 @@
             <input type="text" class="search-input" name="instant-search" placeholder="Search"></a>
 
             <ul class="dropdown-menu insta-search">
-              <!-- Iterate through results, append lis -->
+              <!-- Iterate through results, append li's -->
             </ul>
         </div>
       </li>
