More search work...

--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -21,19 +21,19 @@
         </ul>
       </li>
     </ul>
-
+    <!-- Search Nav -->
     <ul class="nav navbar-nav navbar-right">
       <li>
         <div class="search-div">
-          <a href="#" class="dropdown-toggle search-anchor" data-toggle="dropdown" role="button"
-            aria-haspopup="true" aria-expanded="true">
-            <input type="text" class="search-input" name="instant-search" placeholder="Search"></a>
+
+
+            <input type="text" class="search-input" name="instant-search" placeholder="Search">
 
             <ul class="dropdown-menu insta-search">
-              <!-- Iterate through results, append li's -->
             </ul>
         </div>
       </li>
+
       <% if (window.TenGigg.CURRENT_USER.username !== "Account") { %>
 
         <!-- Submit Button -->
