--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -25,10 +25,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li>
         <div class="search-div">
-
-
-            <input type="text" class="search-input" name="instant-search" placeholder="Search">
-
+            <input type="text" class="form-control search-input" name="instant-search" placeholder="Search posts by title...">
             <ul class="dropdown-menu insta-search">
             </ul>
         </div>
@@ -38,7 +35,7 @@
 
         <!-- Submit Button -->
         <li>
-          <button id='compose' class="btn btn-info">Submit</button>
+          <button id='compose' class="btn btn-info">Submit!</button>
         </li>
 
         <!-- Account Dropdown (logged in) -->
