Wording, db stuff

--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -35,7 +35,7 @@
 
         <!-- Submit Button -->
         <li>
-          <button id='compose' class="btn btn-info">Submit!</button>
+          <button id='compose' class="btn btn-info">Submit Post!</button>
         </li>
 
         <!-- Account Dropdown (logged in) -->
