Add log in link to error message

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -270,6 +270,11 @@ li.post-thumb-item {
 	text-decoration: none;
 }
 
+.log-in-link {
+  text-decoration: underline;
+  color: blue;
+}
+
 //POST FORM MODAL
 
 ul.category-select {
